@startuml
title Class Diagram - Opzione MongoDB

' ─── Nuovo domain model ───────────────────────────────────────
class Conversation {
  +id: String
  +matricola: String
  +title: String
  +messages: List[Message]
  +createdAt: datetime
  +updatedAt: datetime
}

class Message {
  +role: String
  +content: String
  +timestamp: datetime
}

' ─── Nuova classe repository ─────────────────────────────────
class ConversationRepository {
  -_collection: AsyncIOMotorCollection
  +getConversations(matricola: String): List[Dict]
  +createConversation(matricola: String): str
  +getMessages(conv_id: String): List[Dict]
  +getRecentHistory(conv_id: String, limit: int): List[Dict]
  +appendMessages(conv_id: String, user_msg: String, assistant_msg: String): void
  +updateTitle(conv_id: String, title: String): void
  +deleteConversation(conv_id: String): void
}

note right of ConversationRepository
  MongoDB collection: "conversations"
  Scrittura ad ogni messaggio
  (nessun rischio perdita dati)
end note

' ─── Nuovi endpoint in main.py ────────────────────────────────
class ConversationAPI <<FastAPI routes>> {
  +list_conversations(matricola: String): List
  +create_conversation(matricola: String): Dict
  +get_conversation(conv_id: String): Dict
  +delete_conversation(conv_id: String): Dict
}

' ─── Modifiche a classi esistenti ────────────────────────────
class OrchestratorAgent {
  -llm: ChatGroq
  -classifier: ClassifierAgent
  -generator: GeneratorAgent
  -reviser: RevisionAgent
  -workflow: StateGraph
  +process_query(query: String, user_info: Dict, conv_repo: ConversationRepository, conv_id: String): Dict
  +get_available_agents(): List
  +analyze_query(query: String): Dict
}

note right of OrchestratorAgent
  Aggiunta dipendenza su
  ConversationRepository e conv_id.
  Legge history da MongoDB.
end note

class QueryRequest {
  +query: String
  +user_info: Optional[Dict]
  +conv_id: String
  ' conversation_history rimossa
}

note right of QueryRequest
  conv_id aggiunto per identificare
  la conversazione attiva.
  conversation_history rimossa.
end note

' ─── Classi invariate (solo per contesto) ────────────────────
class AgentState {
  +query: String
  +conversation_history: List[Dict]
  +user_status: String
  +user_matricola: String
  +category: String
  +generated_response: String
  +final_response: String
  +workflow_steps: List
  +status: String
}

class ProfileRepository {
  +findById(matricola: String): dict
  +findByEmail(email: String): dict
  +save(user_doc: dict): dict
  +exists(matricola: String): bool
}

' ─── Relazioni ───────────────────────────────────────────────
Conversation "1" *--> "many" Message          : messages

ConversationRepository --> Conversation        : persiste

OrchestratorAgent "1" *--> "1" ClassifierAgent
OrchestratorAgent "1" *--> "1" GeneratorAgent
OrchestratorAgent "1" *--> "1" RevisionAgent
OrchestratorAgent --> AgentState               : crea / aggiorna
OrchestratorAgent --> ConversationRepository   : legge e scrive history

ConversationAPI --> ConversationRepository     : delega
ConversationAPI ..> QueryRequest               : usa

@enduml
